; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_send.c_send_utimes_command.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_send.c_send_utimes_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@BTRFS_SEND_CMD_UTIMES = common dso_local global i32 0, align 4
@BTRFS_SEND_TLV_PATH = common dso_local global i32 0, align 4
@BTRFS_SEND_TLV_ATIME = common dso_local global i32 0, align 4
@BTRFS_SEND_TLV_MTIME = common dso_local global i32 0, align 4
@BTRFS_SEND_TLV_CTIME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i8*, i8*, i8*, i8*)* @send_utimes_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_utimes_command(%struct.TYPE_6__* %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %11, align 4
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %16 = load i32, i32* @BTRFS_SEND_CMD_UTIMES, align 4
  %17 = call i32 @send_command(%struct.TYPE_6__* %15, i32 %16)
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %19 = load i32, i32* @BTRFS_SEND_TLV_PATH, align 4
  %20 = load i8*, i8** %7, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %23, label %27

23:                                               ; preds = %5
  %24 = load i8*, i8** %7, align 8
  %25 = call i64 @strlen(i8* %24)
  %26 = trunc i64 %25 to i32
  br label %28

27:                                               ; preds = %5
  br label %28

28:                                               ; preds = %27, %23
  %29 = phi i32 [ %26, %23 ], [ 0, %27 ]
  %30 = call i32 @send_add_tlv(%struct.TYPE_6__* %18, i32 %19, i8* %20, i32 %29)
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %32 = load i32, i32* @BTRFS_SEND_TLV_ATIME, align 4
  %33 = load i8*, i8** %8, align 8
  %34 = call i32 @send_add_tlv(%struct.TYPE_6__* %31, i32 %32, i8* %33, i32 1)
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %36 = load i32, i32* @BTRFS_SEND_TLV_MTIME, align 4
  %37 = load i8*, i8** %9, align 8
  %38 = call i32 @send_add_tlv(%struct.TYPE_6__* %35, i32 %36, i8* %37, i32 1)
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %40 = load i32, i32* @BTRFS_SEND_TLV_CTIME, align 4
  %41 = load i8*, i8** %10, align 8
  %42 = call i32 @send_add_tlv(%struct.TYPE_6__* %39, i32 %40, i8* %41, i32 1)
  %43 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %44 = load i32, i32* %11, align 4
  %45 = call i32 @send_command_finish(%struct.TYPE_6__* %43, i32 %44)
  ret void
}

declare dso_local i32 @send_command(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @send_add_tlv(%struct.TYPE_6__*, i32, i8*, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @send_command_finish(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
